# partmc

./: .RData  .Rhistory  .codecov.yml  .dockerignore  .gitignore  .travis.yml  CITATION.cff  CMakeLists.txt  CMakeListsWrong.txt  COPYING  ChangeLog  ChangeLog.md  Dockerfile  Dockerfile.camp  Dockerfile.cloud_parcel  Dockerfile.doc  Dockerfile.mosaic  Dockerfile.mpi  Dockerfile.tchem  Doxyfile  Makefile  Makefile.deps  Makefile.local.gfortran_mpi  Makefile.local.joseph_no_mosaic  Makefile.local.matt  Makefile.local.matt_everest  Makefile.local.matt_lagrange  Makefile.local.matt_laptop  Makefile.local.matt_laptop_10_4  Makefile.local.matt_tableau  Makefile.local.nicole_everest  Makefile.local.nicole_laptop  Makefile.local.nicole_tableau  Makefile.local.pgf90  Makefile.local.pgf95  Makefile.local.pgf95_mpi  Makefile.local.rahul  Makefile.mosaic_dirs.nicole  Makefile.mosaic_dirs.rahul  Makefile.paths.nicole  (+568 more)
c/: Makefile  kernel_golovin.c  kernel_golovin.h  mc_adapt.c  mc_exact.c  particle_array.c  process_out.c  run_golovin_adapt.c  run_golovin_exact.c
doc/: Doxyfile  Makefile  README.html  doxygen_entrydb_1777.tmp  doxygen_entrydb_445.tmp  doxygen_html_style.css  f90_mod_deps.py  mathjax.js  partmc.html  partmc_modules.eps  partmc_modules.gv  references.bib
equilib/: compute_equilib.cgi  equilib.deps  equilib.f90  equilib.html
new_cond/: avg.py  avg.sh  cond_1.spec  cond_1_both.spec  cond_1_comp.spec  cond_1_size.spec  cond_2.spec  cond_2_both.spec  cond_2_comp.spec  cond_2_size.spec  cond_3.spec  cond_3_both.spec  cond_3_comp.spec  cond_3_size.spec  cond_4.spec  cond_4_both.spec  cond_4_comp.spec  cond_4_size.spec  cond_template.spec  make_specs.py  run.py  run.sh
old_code/: array.f  array_hybrid.f  array_super.f  makemake.py  mc_adapt.f  mc_fix.f  mc_fix_super.f  mc_var.f  old_Makefile  run_brown_fix_hybrid.f  run_constant_fix_hybrid.f  run_golovin_adapt.f  run_golovin_exact.f  run_golovin_fix.f  run_golovin_script.sh  run_golovin_var.f  run_sedi_adapt.f  run_sedi_fix.f  run_sedi_fix_hybrid.f  run_sedi_fix_hybrid_test.f  run_sedi_fix_split.f  run_sedi_fix_super.f  run_sedi_var.f
paper_partmc_aging/: fig_aging_aero_2d_age.py  fig_aging_aero_2d_age_disc.py  fig_aging_aero_2d_aging_time.py  fig_aging_aero_2d_aging_time_by_time.py  fig_aging_aero_2d_bc_ss.py  fig_aging_aero_particles.py  fig_aging_aero_tau.py  fig_aging_aero_time_bulk.py  fig_aging_aero_time_totals.py  fig_aging_aero_time_totals_all.py  fig_aging_aero_time_transfers.py  fig_aging_ccn_spectra.py  fig_aging_tau_day_night.py  fig_helper.py  process_aging_1_binning.py  process_aging_2_counting.py  process_aging_3_tau.py  process_continuous_aging_1_make_traces.py  process_particle_aging_1_find_aging_times.py  process_particle_aging_2_plot_data.py  process_particle_aging_3_plot_data_by_time.py  rahul_sc_mod.f90
paper_partmc_mosaic/: fig_aero_2d_all_no_coag.py  fig_aero_2d_proj.py  fig_aero_water_dist.py  make_movs.sh  mov_aero_2d_all_no_coag.py
proj/: plot_size_mass.gnuplot  run_mc.spec  run_test.sh
src/: .output.F90.swp  CMakeLists.txt  Jacobian.c  Jacobian.h  Makefile  Makefile.wrf_partmc  aero_binned.F90  aero_binned.deps  aero_binned.f90  aero_component.F90  aero_data.F90  aero_data.F95  aero_data.deps  aero_data.f90  aero_dist.F90  aero_dist.F95  aero_dist.deps  aero_dist.f90  aero_info.F90  aero_info.deps  aero_info.f90  aero_info_array.F90  aero_info_array.F95  aero_info_array.deps  aero_info_array.f90  aero_mode.F90  aero_mode.F95  aero_mode.f90  aero_particle.F90  aero_particle.F95  aero_particle.deps  aero_particle.f90  aero_particle_array.F90  aero_particle_array.F95  aero_particle_array.deps  aero_particle_array.f90  aero_phase_data.F90  aero_phase_solver.c  aero_phase_solver.h  aero_rep_data.F90  (+324 more)
src/aero_reps/: aero_rep_modal_binned_mass.F90  aero_rep_modal_binned_mass.c  aero_rep_modal_mass.F90  aero_rep_modal_mass.c  aero_rep_single_particle.F90  aero_rep_single_particle.c  aero_rep_single_particle_state.F90
src/cuda/: .clang-format  camp_gpu_cusolver.h  camp_gpu_solver.cu  camp_gpu_solver.h  cuda_structs.h  cvode_gpu.cu  cvode_gpu.h  cvode_gpu2.cu  cvode_gpu2.h  itsolver_gpu.cu  itsolver_gpu.h  itsolvergpu2.h  libsolv.cu  libsolv.h  libsolv2.cu  libsolv2.h  phlex_gpu_solver.cu  phlex_gpu_solver.h  rxns_gpu.h
src/cuda/aero_reps_gpu/: aero_rep_modal_binned_mass.cu  aero_rep_single_particle.cu
src/cuda/aeros_gpu/: aero_phase_solver.cu  aero_phase_solver_gpu.h  aero_rep_solver.cu  aero_rep_solver_gpu.h  aero_reps_gpu.h  sub_model_solver.cu  sub_model_solver_gpu.h  sub_models_gpu.h
src/cuda/rxns_gpu/: rxn_CMAQ_H2O2.cu  rxn_CMAQ_OH_HNO3.cu  rxn_HL_phase_transfer.cu  rxn_PDFiTE_activity.cu  rxn_SIMPOL_phase_transfer.cu  rxn_ZSR_aerosol_water.cu  rxn_aqueous_equilibrium.cu  rxn_arrhenius.cu  rxn_condensed_phase_arrhenius.cu  rxn_emission.cu  rxn_first_order_loss.cu  rxn_photolysis.cu  rxn_tmp.cu  rxn_troe.cu  rxn_wet_deposition.cu
src/debug_and_stats/: camp_debug_2.c  camp_debug_2.h
src/rxns/: rxn2_arrhenius.cu  rxn_CMAQ_H2O2.F90  rxn_CMAQ_H2O2.c  rxn_CMAQ_OH_HNO3.F90  rxn_CMAQ_OH_HNO3.c  rxn_HL_phase_transfer.F90  rxn_HL_phase_transfer.c  rxn_PDFiTE_activity.F90  rxn_PDFiTE_activity.c  rxn_SIMPOL_phase_transfer.F90  rxn_SIMPOL_phase_transfer.c  rxn_ZSR_aerosol_water.F90  rxn_ZSR_aerosol_water.c  rxn_activity.F90  rxn_activity.c  rxn_aqueous_equilibrium.F90  rxn_aqueous_equilibrium.c  rxn_arrhenius.F90  rxn_arrhenius.F90.temp  rxn_arrhenius.c  rxn_condensed_phase_arrhenius.F90  rxn_condensed_phase_arrhenius.c  rxn_emission.F90  rxn_emission.c  rxn_fastj_photo.F90  rxn_first_order_loss.F90  rxn_first_order_loss.c  rxn_gpu_arrhenius.cu  rxn_gpu_arrhenius.h  rxn_phase_transfer.F90  rxn_phase_transfer.c  rxn_photolysis.F90  rxn_photolysis.c  rxn_ternary_chemical_activation.F90  rxn_ternary_chemical_activation.c  rxn_troe.F90  rxn_troe.c  rxn_wennberg_no_ro2.F90  rxn_wennberg_no_ro2.c  rxn_wennberg_tunneling.F90  (+3 more)
src/sub_models/: sub_model_PDFiTE.F90  sub_model_PDFiTE.c  sub_model_UNIFAC.F90  sub_model_UNIFAC.c  sub_model_ZSR_aerosol_water.F90  sub_model_ZSR_aerosol_water.c
sun/: Makefile  (+2 more)
(+2860 files in other folders)
